Fix scrollbar rendering

--- a/_sass/layouts/team.scss
+++ b/_sass/layouts/team.scss
@@ -1,10 +1,10 @@
 .team-section {
-    margin-top: 8vh;
-    margin-bottom: 10vh;
+    margin-top: 7rem;
+    margin-bottom: 3rem;
     overflow-x: hidden;
 
     h2 {
-        margin-bottom: 5vh;
+        margin-bottom: 1rem;
     }
 
     .subtitle {
